# fastapi_zero

./: .dockerignore  .gitignore  Dockerfile  README.md  database.db  docker-compose.yaml  fly.toml  postgres-flyio.md  pyproject.toml
.github/workflows/: ci-pipeline.yml
fastapi_zero/: app.py  database.py  schemas.py  security.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 68aec44610b0_criação_de_campos_created_at_e_updated_.py  9632aa4435d8_add_updated_at_field_to_users_table.py  99a15afe0205_create_users_table.py  df6d83af9349_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_user_crud.py  test_users.py
